# marketplace-service

./: .envrc  .gitignore  BUILD.bazel  Dockerfile  MODULE.bazel  WORKSPACE  buf.gen.yaml  cloudbuild.yaml  docker-compose.yaml  go.mod  go.sum  go_deps.bzl  main.go
.github/ISSUE_TEMPLATE/: sweep-fast-template.yml  sweep-slow-template.yml
.github/workflows/: buf-push.yaml  cd.yaml  merge.yaml  nightly.yaml  pr.yaml  push.yaml
.trunk/: actions  logs  notifications  trunk.yaml
.trunk/plugins/: trunk
api/: buf.yaml
api/interceptors/: auth_interceptor.go  panic_interceptor.go
api/proto/: buf.yaml
api/proto/ride/marketplace/v1alpha1/: service.proto
api/ride/marketplace/v1alpha1/: BUILD.bazel  service.pb.go  service.proto
api/ride/marketplace/v1alpha1/marketplacev1alpha1connect/: BUILD.bazel  service.connect.go
api/ride/marketplace/v1alpha1/v1alpha1connect/: BUILD.bazel  service.connect.go
api/service/: get_location.go  get_status.go  go_offline.go  go_online.go  service.go  update_location.go  watch_location.go  watch_status.go
cmd/api-server/: BUILD.bazel  container_structure_test.yaml  main.go  wire.go  wire_gen.go
config/: BUILD.bazel  config.go
config/di/: wire.go  wire_gen.go
deployment/: Pulumi.yaml  package-lock.json  package.json
di/: wire.go  wire_gen.go
infra/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  index.ts  package-lock.json  package.json  pnpm-lock.yaml
interceptors/: auth_interceptor.go
internal/api-handlers/: BUILD.bazel  cancel_trip.go  create_trip.go  end_trip.go  get_location.go  get_status.go  get_trip.go  go_offline.go  go_online.go  service.go  start_trip.go  update_location.go  verify_trip.go  watch_location.go  watch_status.go  watch_trip.go
internal/api-handlers/interceptors/: BUILD.bazel  auth_interceptor.go  panic_interceptor.go
internal/repositories/driver/: BUILD.bazel  driver_repository.go  get_driver.go  get_vehicle.go  impl.go
internal/repositories/driver/mock/: BUILD.bazel  driver_repository.go  get_driver.go
internal/repositories/location/: BUILD.bazel  firebase_impl.go  get_location.go  listen_location.go  location_repository.go  update_location.go
internal/repositories/location/mock/: BUILD.bazel  location_repository.go
internal/repositories/status/: BUILD.bazel  firebase_impl.go  get_status.go  go_offline.go  go_online.go  listen_status.go  status_repository.go
internal/repositories/status/mock/: BUILD.bazel  status_repository.go
internal/repositories/trip/: BUILD.bazel  create_trip.go  firebase_pubsub_impl.go  get_trip.go  trip_repository.go  update_trip.go  watch_trip.go  watch_trips_created.go
internal/repositories/wallet/: BUILD.bazel  wallet_repository.go
internal/repositories/wallet/mock/: BUILD.bazel  wallet_repository.go
internal/testing/mocks/: BUILD.bazel  driver_repository.go  location_repository.go  status_repository.go  wallet_repository.go
internal/use-cases/: BUILD.bazel  search-driver.go
internal/utils/logger/: BUILD.bazel  logger.go
internal/utils/tools/: tools.go
internal/utils/types/: BUILD.bazel  event.go
mocks/: entity_repository.go  status_repository.go
pkg/testing/mocks/: BUILD.bazel  driver_repository.go  location_repository.go  status_repository.go  wallet_repository.go
repositories/driver/: driver_repository.go
repositories/entity/: entity_repository.go
repositories/location/: location_repository.go
repositories/status/: status_repository.go
repositories/wallet/: wallet_repository.go
service/: get_location.go  get_status.go  go_offline.go  go_online.go  update_location.go
testing/mocks/: driver_repository.go  location_repository.go  status_repository.go  wallet_repository.go
utils/logger/: logger.go
