load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "api-handlers",
    srcs = [
        "get_location.go",
        "get_status.go",
        "go_offline.go",
        "go_online.go",
        "service.go",
        "update_location.go",
        "watch_location.go",
        "watch_status.go",
    ],
    importpath = "github.com/ride-app/marketplace-service/internal/api-handlers",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/ride/marketplace/v1alpha1",
        "//internal/repositories/driver",
        "//internal/repositories/location",
        "//internal/repositories/status",
        "//internal/repositories/wallet",
        "@com_connectrpc_connect//:connect",
        "@com_github_bufbuild_protovalidate_go//:protovalidate-go",
        "@com_github_dragonfish_go//pkg/logger",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "api-handlers_test",
    srcs = ["service_suite_test.go"],
    deps = [
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
    ],
)
