load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "api-handlers",
    srcs = [
        "cancel_trip.go",
        "create_trip.go",
        "end_trip.go",
        "get_location.go",
        "get_status.go",
        "get_trip.go",
        "go_offline.go",
        "go_online.go",
        "service.go",
        "start_trip.go",
        "update_location.go",
        "verify_trip.go",
        "watch_location.go",
        "watch_status.go",
        "watch_trip.go",
    ],
    importpath = "github.com/ride-app/marketplace-service/internal/api-handlers",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/ride/marketplace/v1alpha1",
        "//internal/repositories/driver",
        "//internal/repositories/location",
        "//internal/repositories/status",
        "//internal/repositories/trip",
        "//internal/repositories/wallet",
        "//internal/use-cases",
        "@com_connectrpc_connect//:connect",
        "@com_github_aidarkhanov_nanoid//:nanoid",
        "@com_github_bufbuild_protovalidate_go//:protovalidate-go",
        "@com_github_dragonfish_go_v2//pkg/logger",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "api-handlers_test",
    srcs = ["service_suite_test.go"],
    deps = [
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
    ],
)
