load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "use-cases",
    srcs = ["search-driver.go"],
    importpath = "github.com/ride-app/marketplace-service/internal/use-cases",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/ride/marketplace/v1alpha1",
        "@com_github_dragonfish_go_v2//pkg/logger",
    ],
)
