load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "interceptors",
    srcs = [
        "auth_interceptor.go",
        "panic_interceptor.go",
    ],
    importpath = "github.com/ride-app/marketplace-service/internal/api-handlers/interceptors",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/utils/logger",
        "@com_connectrpc_connect//:connect",
        "@com_github_golang_jwt_jwt_v5//:jwt",
        "@com_github_micahparks_keyfunc_v2//:keyfunc",
    ],
)
