load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "status",
    srcs = ["status_repository.go"],
    importpath = "github.com/ride-app/marketplace-service/internal/repositories/status",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/ride/marketplace/v1alpha1",
        "@build_buf_gen_go_ride_driver_protocolbuffers_go//ride/driver/v1alpha1",
        "@com_github_dragonfish_tech_go//pkg/logger",
        "@com_google_cloud_go_firestore//:firestore",
        "@com_google_firebase_go_v4//:go",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
