load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "wallet",
    srcs = ["wallet_repository.go"],
    importpath = "github.com/ride-app/marketplace-service/internal/repositories/wallet",
    visibility = ["//:__subpackages__"],
    deps = [
        "//config",
        "@build_buf_gen_go_ride_wallet_connectrpc_go//ride/wallet/v1alpha1/walletv1alpha1connect",
        "@build_buf_gen_go_ride_wallet_protocolbuffers_go//ride/wallet/v1alpha1",
        "@com_connectrpc_connect//:connect",
        "@com_github_ride_app_go//pkg/logger",
    ],
)
