load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "wallet",
    srcs = ["wallet_repository.go"],
    importpath = "github.com/ride-app/marketplace-service/internal/repositories/wallet",
    visibility = ["//:__subpackages__"],
    deps = [
        "//config",
        "@build_buf_gen_go_ride_payments_connectrpc_go//ride/payments/v1alpha1/paymentsv1alpha1connect",
        "@build_buf_gen_go_ride_payments_protocolbuffers_go//ride/payments/v1alpha1",
        "@com_connectrpc_connect//:connect",
        "@com_github_dragonfish_tech_go//pkg/logger",
    ],
)
