load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mocks",
    srcs = [
        "driver_repository.go",
        "location_repository.go",
        "status_repository.go",
        "wallet_repository.go",
    ],
    importpath = "github.com/ride-app/marketplace-service/pkg/testing/mocks",
    visibility = ["//visibility:public"],
    deps = [
        "//api/ride/marketplace/v1alpha1",
        "//internal/repositories/location",
        "//internal/repositories/status",
        "@build_buf_gen_go_ride_driver_protocolbuffers_go//ride/driver/v1alpha1",
        "@build_buf_gen_go_ride_wallet_protocolbuffers_go//ride/wallet/v1alpha1",
        "@com_github_ride_app_go//pkg/logger",
        "@org_uber_go_mock//gomock",
    ],
)
