load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "v1alpha1",
    srcs = ["service.pb.go"],
    importpath = "github.com/ride-app/marketplace-service/api/ride/marketplace/v1alpha1",
    visibility = ["//visibility:public"],
    deps = [
        "@build_buf_gen_go_bufbuild_protovalidate_protocolbuffers_go//buf/validate",
        "@build_buf_gen_go_ride_driver_protocolbuffers_go//ride/driver/v1alpha1",
        "@org_golang_google_genproto//googleapis/type/latlng",
        "@org_golang_google_genproto_googleapis_api//annotations",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
