load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mock",
    srcs = ["driver_repository.go"],
    importpath = "github.com/ride-app/marketplace-service/internal/repositories/driver/mock",
    visibility = ["//:__subpackages__"],
    deps = [
        "@build_buf_gen_go_ride_driver_protocolbuffers_go//ride/driver/v1alpha1",
        "@com_github_ride_app_go//pkg/logger",
        "@org_uber_go_mock//gomock",
    ],
)
