load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mock",
    srcs = ["wallet_repository.go"],
    importpath = "github.com/ride-app/marketplace-service/internal/repositories/wallet/mock",
    visibility = ["//:__subpackages__"],
    deps = [
        "@build_buf_gen_go_ride_wallet_protocolbuffers_go//ride/wallet/v1alpha1",
        "@com_github_dragonfish_go_v2//pkg/logger",
        "@org_uber_go_mock//gomock",
    ],
)
